--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/passport": "^10.3",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
+        "psr/simple-cache": "^1.0",
         "spatie/laravel-activitylog": "^4.4",
         "spatie/laravel-permission": "^5.5"
     },
