--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,35 @@
-APP_NAME=Laravel
+APP_NAME=FINCRA_WALLET_RILIWAN
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8Z99OnBjKA+59ZBlOdwiKQN/J1IKFzlDWuCkUgAZfSI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://fincra-assmt.test
+
+APP_PORT=1000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
+FORWARD_DB_PORT=3309
 DB_DATABASE=fincra_assmt
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
+
+REDIS_CLIENT=predis
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -36,6 +41,9 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+FORWARD_MAILHOG_PORT=1027
+FORWARD_MAILHOG_DASHBOARD_PORT=8027
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -50,3 +58,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FINCRA_BASE_URL=https://sandboxapi.fincra.com
+FINCRA_API_KEY=w8Nk0jBf82Wbq40oYOsEVzGXUXs36Ih1
+FINCRA_WEBHOOK_KEY=0a79183f7de948c3bd665e0097413e66
